# finance_fraud_detection

./: .env  .env.example  .gitignore  README.md  pyproject.toml  render.yaml  requirements.txt  setup.py
.github/workflows/: deploy_to_hf.yml
config/: lightgbm_params.json  model_config.json  neural_network_params.json  random_forest_best_params.json  random_forest_params.json
config/dev/: config.json
config/prod/: config.json
data/raw/: sample_transactions.parquet
docs/: Data Science PRD.docx  README.md  data_science_pipeline.md  roadmap.md
docs/api/: README.md  endpoints.md  integration.md  overview.md
docs/development/: README.md
docs/guides/: getting_started.md  troubleshooting.md
docs/reference/: CHANGELOG.md  MODEL_CARD.md  ROADMAP.md
docs/results/: eda_findings.md
docs/technical/: DEVELOPMENT.md  MODEL.md  OPERATIONS.md
fraud_detection/: __init__.py
fraud_detection/api/: __init__.py  run.py
fraud_detection/core/: __init__.py  data_processor.py  eda.py
fraud_detection/database/: __init__.py  mock_supabase.py  supabase_client.py  supabase_setup.sql
fraud_detection/evaluation/: metrics.py
fraud_detection/models/: __init__.py  base.py  ensemble.py  ensemble_model.py  ml_tracker.py  model_development.py  model_manager.py  model_trainer.py  model_validator.py  train_model.py  train_pipeline.py  update_model.py
implementation/: Dockerfile  README.md  __init__.py  app.py  data_processor.py  eda.py  model_manager.py  requirements.txt  supabase_client.py  supabase_setup.sql  train_model.py  update_model.py
models/: ensemble_metadata.json  fraud_detector.lgb
notebooks/: eda.ipynb  eda_script.py
reports/: eda_report_20250131_192707.txt
scripts/: create_test_model.py  deploy_to_hf.py  fix_policies.sql  init_db.py  init_supabase.py  seed_data.py  test_supabase.py  verify_tables.py
spaces/: app.py  requirements.txt
src/: config.py
(+37 files in other folders)
